Added hover and data JSON file

--- a/index.html
+++ b/index.html
@@ -503,6 +503,8 @@
    c-1.593,0.479,7.162,7.477,9.948,5.908C105.428,386.842,110.734,383.463,114.447,379.604z"></path>
   </svg>
 </div>
+<div id="hoverTarget">
+</div>
 <button class="ui primary button">
 Save
 </button>
