fixade färg och så kategori fungerar

--- a/index.html
+++ b/index.html
@@ -510,10 +510,12 @@
       c2.211-2.297-4.776,1.445-7.959,0.965c-3.185-0.481-4.774,3.859-7.959,2.41c-3.185-1.444-4.245-0.961-5.836-0.479
       c-1.593,0.479,7.162,7.477,9.948,5.908C105.428,386.842,110.734,383.463,114.447,379.604z"></path>
       </svg>
+      <div id= "transfer"></div>
       </div>
       <div id="searchContainer" class="center floated five wide column">
-        <select id ="cat" onchange="filterCategories()" class="ui fluid search selection dropdown">
-          <option value="">Kategorier</option>
+        <select id ="cat" onchange="filterCategories()" class="ui fluid search selection dropdown select">
+          <option selected value=undefined>Alla</option>
+         
           <option value="9350">Teknik & Ingenjörer</option>
           <option value="9230">Data & IT</option>
           <option value="9260">Försäljning</option>
