svg sperate merge

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
           <select id ="cat" onchange="filterCategories()" class="ui fluid search selection dropdown">
             <option value="" disabled selected>Välj kategori</option>
+            <option value="Alla">Alla</option>
           </select>
         </div>
 
