--- a/index.html
+++ b/index.html
@@ -21,14 +21,6 @@
     <div id="loader"></div>
 
     <div style="display:none;" id="myDiv" class="animate-bottom">
-  
-
-          <h2>Time</h2>
-          <div><p style="display: none" id="value-range"></p></div>
-          <div><div id="slider-range"></div></div>
-          <div id="slider-container"></div>
-          <div id="range-label"></div>
-
         <div class="row">
           <div class="ui grid">
             <div id="mapContainer" class="left floated five wide column"></div>
@@ -36,7 +28,8 @@
               <h2>Time</h2>
               <div><p style="display: none" id="value-range"></p></div>
               <div><div id="slider-range"></div></div>
-
+              <div id="slider-container"></div>
+              <div id="range-label">0 - 10</div>
               <select id ="cat" onchange="filterCategories()" class="ui fluid search selection dropdown">
                 <option value="" disabled selected>Välj kategori</option>
               </select>
