--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="https://d3js.org/d3.v5.js"></script>
     <!-- Range slider code -->
     <script src="https://cdn.rawgit.com/RasmusFonseca/d3RangeSlider/master/d3RangeSlider.js"></script>
+    <link href="https://cdn.rawgit.com/RasmusFonseca/d3RangeSlider/master/d3RangeSlider.css" rel="stylesheet">
   </head>
 
   <body>
