--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.8/semantic.min.js"></script>
     <script src="https://unpkg.com/d3-simple-slider/build/d3-simple-slider.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.2/modernizr.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.2/modernizr.js"></script>
     <script src="https://d3js.org/d3.v5.js"></script>
     <!-- Range slider code -->
     <script src="https://cdn.rawgit.com/RasmusFonseca/d3RangeSlider/master/d3RangeSlider.js"></script>
@@ -23,10 +23,7 @@
 
     <div style="display:none;" id="myDiv" class="animate-bottom"></div>
   
-
       <div class="ui grid">
-
-
 
         <div class="row">
           
