la till comparemode, laggar ganska mycket innan vi fixar hämnting från servern

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
     <div id="loader"></div>
 
     <div style="display:none;" id="myDiv" class="animate-bottom">
-  
+      <div class="checkboxDiv">
+      <input type="checkbox" id="modeChange" value="A" ><label>Compare mode (klicka pp ett län för att få upp linegraph</label>
+    </div>
       <div class="ui grid">
 
         <div class="row">
@@ -44,6 +46,7 @@
               <option value="" disabled selected>Välj kategori</option>
               <option value="Alla">Alla</option>
             </select>
+            <div id="linegraph"></div>
           </div>
 
 
