--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
       <div class="ui grid">
 
         <div class="row">
-          <div id="legend1" class="left floated one wide column"><p style="float:right; width: 10%; padding-top:2%;">(%) av maxantal</p></div>
+          <div id="legend1" class="left floated one wide column"><p style="float:right; width: 10%; padding-top:2%;">(%) av maxantal.</p></div>
+          <div id="legend2" class="left floated one wide column" style="display:none;"></div>
           <div id="mapContainer" class="left floated four wide column"></div>
 
           <div id="countyContainer" class="two wide column"></div>
