lagt till indikator för valda kategorier

--- a/index.html
+++ b/index.html
@@ -45,10 +45,12 @@
   
             <div id ="cat" class="ui dropdown button">
 
-              <span id="selectedValue" class="text">Choose Category</span>
+              <span id="selectedValue" class="text">Välj Kategori</span>
+              <span class='text' value="Alla">Alla</span>
               <i class="dropdown icon"></i>
             
             </div>
+            <div id="category-label"></div>
             <div id="linegraph"></div>
           </div>
 
