ännu mer interaktiv 'vald-kategori'-indikator

--- a/index.html
+++ b/index.html
@@ -44,10 +44,9 @@
             <div id="range-label"></div>
   
             <div id ="cat" class="ui dropdown button">
-
-              <span id="selectedValue" class="text">Välj Kategori</span>
-              <span class='text' value="Alla">Alla</span>
-              <i class="dropdown icon"></i>
+              <div id="selectedValue" class="default text">Välj Kategori</div>
+              <!--<span id="selectedValue" class="text">Välj Kategori</span>-->
+              <i class="dropdown icon" style="float:right;"></i>
             
             </div>
             <div id="category-label"></div>
