title for linegraph

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <div style="display:none;" id="myDiv" class="animate-bottom">
       <div class="checkboxDiv">
-      <input type="checkbox" id="modeChange" value="A" autocomplete="off" ><label>Compare mode (klicka pp ett län för att få upp linegraph</label>
+      <input type="checkbox" id="modeChange" value="A" autocomplete="off" ><label>Compare mode (klicka på ett län för att få upp linegraph</label>
     </div>
       <div class="ui grid">
 
