country contrast & stuff

--- a/index.html
+++ b/index.html
@@ -99,12 +99,12 @@
                   </ul>
                   <li>Filip Ståhl</li>
                   <ul>
-                      <li>Front-end</li>
+                      <li>Front-end programmer</li>
                       <li>UX-design and UI</li>
                   </ul>
                   <li>Joel Weidenmark</li>
                   <ul>
-                      <li>Front-end</li>
+                      <li>Front-end programmer</li>
                       <li>UX-design and UI</li>
                   </ul>
                   <li>Oskar Norinder</li>
