loading-indicators-men-bajsslider
Lite kodstädnings också

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                       <li>Front-end programmer</li>
                       <li>UX-design and UI</li>
                   </ul>
-                  <li>Filip Ståhl</li>
+                  <li><a href=https://linkedin.com/in/filip-stal" target="_blank">Filip Stål</a></li>
                   <ul>
                       <li>Front-end programmer</li>
                       <li>UX-design and UI</li>
