fixed the disabled look on dropdown

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
             <div class="ui grid">
               <div id ="cat" class="ui dropdown button nine wide column">
-                <div id="selectedValue" class="default text">Välj Kategori</div>
+                <span id="selectedValue" class="text">Välj Kategori</span>
                 <!--<span id="selectedValue" class="text">Välj Kategori</span>-->
                 <i class="dropdown icon" style="float:right;"></i>
               
@@ -113,7 +113,7 @@
                       <li>Front-end programmer</li>
                       <li>UX-design and UI</li>
                   </ul>
-                  <li>Filip Ståhl</li>
+                  <li><a href="https://www.linkedin.com/in/filip-stal/" target="_blank">Filip Stål</a></li>
                   <ul>
                       <li>Front-end programmer</li>
                       <li>UX-design and UI</li>
