kort summering ovanför kartan

--- a/index.html
+++ b/index.html
@@ -24,14 +24,17 @@
     <div id="loader"></div>
 
     <div style="display:none;" id="myDiv" class="animate-bottom">
-      <div class="ui grid">
+      <div class="ui  grid">
 
-        <div class="row">
-          <div id="legend1" class="left floated one wide column"><p style="float:right; width: 10%; padding-top:2%;">(%) av maxantal.</p></div>
-          <div id="legend2" class="left floated one wide column" style="display:none;"></div>
-          <div id="mapContainer" class="left floated four wide column"></div>
+        <div style="padding-right: 0px;" class="left floated seven wide column">
+          <div id="mapHeader" class="sixteen wide column">hej</div>
 
-          <div id="countyContainer" class="two wide column"></div>
+          <div id="legend1" class="left floated two wide column"><p style="float:right; width: 10%; padding-top:2%;">(%) av maxantal.</p></div>
+          <div id="legend2" class="left floated two wide column" style="display:none;"></div>
+          <div id="countyContainer" class="right floated four wide column"></div>
+          <div id="mapContainer" class="center floated ten wide column"></div>
+
+        </div>
 
           <div id="searchContainer" class="center floated five wide column">
             <label class="checkboxDiv">
@@ -72,7 +75,7 @@
           </div>
 
 
-          <div class="right floated five wide column" id= "transfer"></div>
+          <div class="right floated four wide column" id= "transfer"></div>
         
         </div>
 
