Text klar och bilder inlagda men bortkommenterade
Orkar verkligen inte style:a about-sdian just nu, någon får gärna göra om de orkar

--- a/index.html
+++ b/index.html
@@ -98,40 +98,46 @@
               <h2> The Team </h2>
               <p>This our team, as well as our plan of initial workload distribution amongst its members. Prior to starting with the project, each group member was assigned two areas of responsibilites.</p>
               
-              <ul>
-                  <li>Alexander Nordh</li>
+
+                  Alexander Nordh
+<!--                   <img src="styles/images/moodel.png" alt="moodel" class="img">  -->
                   <ul>
                       <li>Group Leader</li>
                       <li>Front-end programmer</li>
                   </ul>
-                  <li>Carl Kernell</li>
+                  Carl Kernell
+<!--                   <img src="styles/images/carl.png" alt="moodel" class="img"> --> 
                   <ul>
                       <li>Back-end programmer</li>
                       <li>Company correspondance</li>
                   </ul>
-                  <li><a href="https://se.linkedin.com/in/carl-svedhag-2a4934109" target="_blank">Carl Svedhag</a></li>
+                  <a href="https://se.linkedin.com/in/carl-svedhag-2a4934109" target="_blank">Carl Svedhag</a>
+<!--                   <img src="styles/images/calle.png" alt="moodel" class="img">  -->
                   <ul>
                       <li>Front-end programmer</li>
                       <li>UX-design and UI</li>
                   </ul>
-                  <li><a href="https://www.linkedin.com/in/filip-stal/" target="_blank">Filip Stål</a></li>
+                  <a href="https://www.linkedin.com/in/filip-stal/" target="_blank">Filip Stål</a>
+<!--                   <img src="styles/images/filip_.jpg" alt="moodel" class="img">  -->
                   <ul>
                       <li>Front-end programmer</li>
                       <li>UX-design and UI</li>
                   </ul>
-                  <li>Joel Weidenmark</li>
+<!--                   <img src="styles/images/joel.png" alt="moodel" class="img">  -->
+                  Joel Weidenmark
                   <ul>
                       <li>Front-end programmer</li>
                       <li>UX-design and UI</li>
                   </ul>
-                  <li>Oskar Norinder</li>
+<!--                   <img src="styles/images/oskar.jpg" alt="moodel" class="img"> -->
+                  Oskar Norinder
                   <ul>
                       <li>Back-end programmer</li>
                       <li>Fullstack programmer</li>
                   </ul>
-              </ul>
 
-              <h2> Learning and takeaways </h2>
+
+              <h2> Learnings and takeaways </h2>
               
               <h3> Working with a stakeholder </h3>
               <p> This is pobabably the first time many of us has worked with an actual stakeholder or client, with demands with respect to technologies and frameworks used in order to fit with the pre-existing IT infrastructure within the company, among many things. This has proved incredibly educational and something we all agree is one of the foremost takeaways from this project. </p>
