--- a/index.html
+++ b/index.html
@@ -94,12 +94,16 @@
                   <li>In the second mode, the user can view regional changes in job ad distributions.</li>
               </ul>
               <p>Filtering of data is done by adjusting the slider boundaries of the time span, grabbing and dragging the selected span along the slider, selecting line of business or specific professions in the dropdown menu and through selecting region of interest either on the map itself or from the list of regions.</p>
-                 
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/oab5VxdsL1k" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              <p>
+                Music courtesy of 
+                <a href="https://www.bensound.com" target="_blank">Bensound</a>.
+                </p>
               <h2> The Team </h2>
               <p>This our team, as well as our plan of initial workload distribution amongst its members. Prior to starting with the project, each group member was assigned two areas of responsibilites.</p>
               
 
-                  Alexander Nordh
+              <a href="https://www.linkedin.com/in/alexander-nordh-464133164/" target="_blank">Alexander Nordh</a>
 <!--                   <img src="styles/images/moodel.png" alt="moodel" class="img">  -->
                   <ul>
                       <li>Group Leader</li>
